--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ecommerce</title>
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <header>
@@ -35,19 +35,19 @@
         <h2>Featured Products</h2>
         <div class="product-con">
           <div class="product">
-            <img src="/images/c-d-x-PDX_a_82obo-unsplash.jpg" alt="" />
+            <img src="c-d-x-PDX_a_82obo-unsplash.jpg" alt="" />
             <h3>Product 1</h3>
             <p>$29.99</p>
             <button>Add To Cart</button>
           </div>
           <div class="product">
-            <img src="/images/daniel-korpai-hbTKIbuMmBI-unsplash.jpg" alt="" />
+            <img src="daniel-korpai-hbTKIbuMmBI-unsplash.jpg" alt="" />
             <h3>Product 2</h3>
             <p>$39.99</p>
             <button>Add To Cart</button>
           </div>
           <div class="product">
-            <img src="/images/grant-ritchie-n_wXNttWVGs-unsplash.jpg" alt="" />
+            <img src="grant-ritchie-n_wXNttWVGs-unsplash.jpg" alt="" />
             <h3>Product 3</h3>
             <p>$49.99</p>
             <button>Add To Cart</button>
@@ -87,7 +87,7 @@
     </section>
     <footer>
       <div class="con">
-        <p>&copy; 2023 Ecommerce Website. All Rights Reserved.</p>
+        <p>&copy; <a href = "https://ai-datawizard.github.io/Portfolio/">Tadiwa Chopamba</a></p>
         <nav>
           <a href="#">Terms of Use</a>
           <a href="#">Privacy Policy</a>
